# rcsb-embedding-model

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: _workflow-docker.yaml  publish.yaml
examples/: esm_embeddings.py
src/: residue_embedding_aggregator.py
src/foldmatch/: __init__.py  foldmatch.py
src/foldmatch/cli/: args_utils.py  embedding.py  inference.py  search.py  sequence.py  structure_embedding.py
src/foldmatch/dataset/: esm_prot_from_chain.py  esm_prot_from_fasta.py  esm_prot_from_structure.py  resdiue_assembly_embedding_from_structure.py  residue_assembly_embedding_from_tensor_file.py  residue_embedding_from_structure.py  residue_embedding_from_tensor_file.py
src/foldmatch/dataset/untils/: __init__.py  utils.py
src/foldmatch/inference/: assembly_inferece.py  chain_inference.py  esm_inference.py  sequence_inference.py  structure_inference.py
src/foldmatch/model/: layers.py  residue_embedding_aggregator.py
src/foldmatch/modules/: structure_module.py
src/foldmatch/search/: __init__.py  clustering.py  database_builder.py  embedding_computer.py  faiss_database.py  structure_search.py
src/foldmatch/types/: api_types.py
src/foldmatch/utils/: data.py  model.py  structure_parser.py  structure_provider.py
src/foldmatch/writer/: batch_writer.py
src/rcsb_embedding_model/: __init__.py  rcsb_structure_embedding.py
src/rcsb_embedding_model/cli/: args_utils.py  inference.py  search.py
src/rcsb_embedding_model/dataset/: assembly_embedding_from_csv.py  esm_prot_from_chain.py  esm_prot_from_csv.py  esm_prot_from_stream_list.py  esm_prot_from_structure.py  resdiue_assembly_embedding_from_structure.py  residue_assembly_embedding_from_tensor_file.py  residue_embedding_from_assembly.py  residue_embedding_from_csv.py  residue_embedding_from_structure.py  residue_embedding_from_tensor_file.py
src/rcsb_embedding_model/inference/: assembly_inferece.py  chain_inference.py  esm_inference.py  structure_inference.py
src/rcsb_embedding_model/model/: residue_embedding_aggregator.py
src/rcsb_embedding_model/modules/: chain_module.py  esm_module.py  structure_module.py
src/rcsb_embedding_model/search/: __init__.py  chroma_database.py  clustering.py  database_builder.py  database_clusterer.py  faiss_database.py  structure_search.py
src/rcsb_embedding_model/types/: api_types.py
src/rcsb_embedding_model/utils/: data.py  model.py  structure_parser.py  structure_provider.py
src/rcsb_embedding_model/writer/: batch_writer.py
tests/: test_cli_embedding.py  test_cli_inference.py  test_cli_search.py  test_embedding_model.py  test_inference.py  test_model.py  test_remote_inference.py  test_sequence_inference.py
tests/resources/: 1acb.A.pt  1acb.B.pt  2uzi.cif  esm-from-chain-inference.csv
tests/resources/embeddings/: 2uzi.A.pt  2uzi.B.pt  2uzi.C.pt
tests/resources/fasta/: test_sequences.fasta
tests/resources/src_stream/: assembly-complete-test.csv  instance-complete-test.csv  instance.csv
(+3 files in other folders)
