[project]
name = "rcsb-embedding-model"
version = "0.0.37"
authors = [
    { name="Joan Segura", email="joan.segura@rcsb.org" },
]
description = "Protein Embedding Model for Structure Search"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Cambrian Non-Commercial License"
license-files = ["LICEN[CS]E*"]
dependencies=[
    "importlib-metadata >= 8.7.0",
    "esm >= 3.2.0",
    "lightning >= 2.5.0",
    "typer >= 0.15.0",
    "hf_xet >= 1.1.10"
]

[project.urls]
Homepage = "https://github.com/rcsb/rcsb-embedding-model"
Issues = "https://github.com/rcsb/rcsb-embedding-model/issues"

[build-system]
requires = [
    "hatchling >= 1.14.1"
]

build-backend = "hatchling.build"

[project.scripts]
inference = "rcsb_embedding_model.cli.inference:app"
