[project]
name = "rcsb-embedding-model"
version = "0.0.48"
authors = [
    { name="Joan Segura", email="joan.segura@rcsb.org" },
]
description = "Protein Embedding Model for Structure Search"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}
license-files = ["LICEN[CS]E*"]
dependencies=[
    "importlib-metadata >= 8.7.0",
    "esm >= 3.2.0",
    "biotite >= 1.5.0",
    "lightning >= 2.5.0",
    "typer >= 0.15.0",
    "hf-xet >= 1.1.10",
    "huggingface-hub >= 0.30.2",
    "httpx >= 0.28.1"
]

[project.urls]
Homepage = "https://github.com/rcsb/rcsb-embedding-model"
Issues = "https://github.com/rcsb/rcsb-embedding-model/issues"

[build-system]
requires = [
    "hatchling >= 1.14.1"
]

build-backend = "hatchling.build"

[project.scripts]
inference = "rcsb_embedding_model.cli.inference:app"
