[project]
name = "foldmatch"
version = "0.3.2"
authors = [
    { name="Joan Segura", email="joan.segura@rcsb.org" },
]
description = "Protein Embedding Model for Structure Search"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

dependencies=[
    "importlib-metadata==8.7.1",
    "esm==3.2.3",
    "biotite==1.6.0",
    "lightning==2.6.1",
    "typer==0.24.1",
    "hf-xet==1.4.2",
    "huggingface-hub==0.36.2",
    "httpx==0.28.1",
    "faiss-cpu==1.13.2",
    "igraph==1.0.0",
    "leidenalg==0.11.0"
]

[project.urls]
Homepage = "https://github.com/rcsb/foldmatch"
Issues = "https://github.com/rcsb/foldmatch/issues"

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[build-system]
requires = [
    "hatchling >= 1.14.1"
]
build-backend = "hatchling.build"

[project.scripts]
inference = "foldmatch.cli.inference:app"
fm-structure = "foldmatch.cli.embedding:app"
fm-search = "foldmatch.cli.search:app"
fm-sequence = "foldmatch.cli.sequence:app"
